--- a/package.Rmd
+++ b/package.Rmd
@@ -18,6 +18,7 @@ library(devtools)
 library(roxygen2)
 library(Rd2roxygen)
 library(rio)
+library(testthat)
 ```
 
 ## Reading in the data with the here package 
@@ -47,6 +48,8 @@ trial_3 <- minimum(rainnum)
 #trial 3 is 0.01
 
 ```
+
+
 
 
 
